created an add and remove link button for the roster

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,10 @@
-#studentForm > sdivs {
+#studentForm > div {
     padding: 0;
 
 }
 /*add padding to div fo*/
 /*space > means everthing underneathh it*/
+
+#studentList {
+    margin-left: lem;
+}
